@@ -2,13 +2,14 @@ package com.huseyinsen.security;
 
 import com.huseyinsen.entity.User;
 import lombok.AllArgsConstructor;
+import lombok.Getter;
 import org.springframework.security.core.GrantedAuthority;
-import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
-import java.util.List;
+import java.util.Collections;
 
+@Getter
 @AllArgsConstructor
 public class UserPrincipal implements UserDetails {
 
@@ -16,23 +17,23 @@ public class UserPrincipal implements UserDetails {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        // Role bilgisini GrantedAuthority olarak dön
-        return List.of(new SimpleGrantedAuthority("ROLE_" + user.getStatus.name()));
+        // Rol sistemin yoksa şimdilik boş liste dönebiliriz.
+        return Collections.emptyList();
     }
 
     @Override
     public String getPassword() {
-        return user.getPassword();
+        return user.getPassword(); // User entity içindeki password
     }
 
     @Override
     public String getUsername() {
-        return user.getEmail();  // username olarak email kullanılıyor
+        return user.getUsername(); // User entity içindeki username (veya email)
     }
 
     @Override
     public boolean isAccountNonExpired() {
-        return true; // İstersen user’dan alabilirsin
+        return true;
     }
 
     @Override
@@ -47,6 +48,6 @@ public class UserPrincipal implements UserDetails {
 
     @Override
     public boolean isEnabled() {
-        return true;
+        return true; // Eğer sisteminde aktiflik durumu varsa burada kontrol edebilirsin
     }
 }
